[project]
name = "quadratic_package_solver_marboi"
version = "0.0.2"
authors = [
  { name="Mariia Boiko", email="marboi@taltech.ee" },
]
description = "A small package to solves the quadratic equation ax²+bx +c = 0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
[tool.setuptools]
packages = ["quadratic_package_solver_marboi"]
package-dir = {"" = "source"}